Mon Oct  3 19:11:08 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Use $(srcdir) to find manual page for make install.

Thu Sep 29 22:20:51 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executable when libraries change.

Wed Jun 29 00:23:09 1994  Tom Yu  (tlyu at dragons-lair)

	* kdb5_stash.c: fix things that should have been krb5_init_ets
