@@ -1,3 +1,10 @@
+Tue Nov  1 19:19:22 1994  Mark Eichin  (eichin@cygnus.com)
+
+	* kdb5_stash.c (main): added -o option to read a Kerberos V4
+	kstash'ed master key.
+	(usage): mention it in the usage message.
+	* kdb5_stash.M: document it.
+
 Mon Oct  3 19:11:08 1994  Theodore Y. Ts'o  (tytso@dcl)
 
 	* Makefile.in: Use $(srcdir) to find manual page for make install.
